--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
     "mysql": "^2.16.0"
   }
 }
